updated docs with production build

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <section id="welcome">
             <div class="welcome__container col-lg-6 col-md-7 col-12">
                 <div class='text-center'>
-                    <h2 class="welcome__overtitle">Welcome to</h1>
+                    <h2 class="welcome__overtitle">Welcome to</h2>
                     <img class="welcome__logo mb-4" src="./img/logo.png">
                     <h5 class="welcome__headline">The first translation app that will help you communicate with your animal friends.</h5>
                 </div>
@@ -18,7 +18,7 @@
                     <img class="welcome__rotunda-logo" src="./img/rotunda-logo.png">
                 </div>   
             </div>
-        </section> <!-- end welcome -->
+        </section> <!-- end #welcome -->
         <section id="animal-translation">
             <div class="translation__container container col-lg-6 col-md-7 col-12">
                 <div class="translation__animal">
@@ -43,7 +43,7 @@
                 </div> 
                 <button class="btn btn-outline-primary text-white-hover" data-bs-toggle="modal" data-bs-target="#animal-selection">Wanna try another animal?</button>
             </div>
-        </section> <!-- end animal-translation -->
+        </section> <!-- end #animal-translation -->
     </body>
     <div class="modal fade" id="animal-selection" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
